resources/WorkloadEntry.yaml
apiVersion: networking.istio.io/v1beta1
kind: WorkloadEntry
metadata:
  name: workload-instance-2
  namespace: default
spec:
  address: 192.168.1.101
  ports:
    http: 80
  labels:
    app: my-service
    version: v1
  weight: 20  # 20% of the traffic will go to this instance

_____________________________________________

# To fully integrate external services into the mesh we often combine WorkloadEntry with ServiceEntry.
# ServiceEntry defines the external service itself 
# WorkloadEntry defines specific instances of the service (VMs or other resources) that belong to that ServiceEntry 

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: external-service
  namespace: default
spec:
  hosts:
    - external-service.com
  ports:
    - number: 80
      name: http
      protocol: HTTP
  resolution: STATIC
  endpoints:
    - address: 192.168.1.100
    - address: 192.168.1.101

# ServiceEntry above registers external service external-service.com
# while WorkloadEntry defines specific instances (IP addresses) that represent this service
